# pvi-editor

./: .gitignore  README.md  boiler_plate.html  git_command.sh  install.sh  pvi.sh  pyproject.toml
pvi/: autocomplete.py  development_main.py  editor.py  icon.py  key_binding.py  main.py  style.tcss  syntax_highlighting.py  utils.py
pvi/components/: delete_dialog.py  directory_content_text.py  footer.py  header.py  key_binding.py  main_editor.py  search_file_dialog.py  sidebar.py  sidebar_input.py  sidebar_style.tcss  text_area.py  welcome_text.py
pvi/store/: settings.ini  stores.ini
pvi/styles/: footer_style.tcss  header_style.tcss  sidebar_style.tcss  style.tcss  welcome_text_style.tcss
